# xfinity-outage

./: .gitignore  LICENSE  README.md  com.connectivity.checker.plist  com.connectivity.checker.system.plist  connectivity_checker.newsyslog.conf  connectivity_checker.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dashboard/: betterstack_dashboard.md
logs/: README.md
logs/Ziyings-MacBook-Pro.local/: connectivity_log_20250709.txt  connectivity_log_20250710.txt  connectivity_log_20250711.txt  connectivity_log_20250712.txt  connectivity_log_20250713.txt
setup/: README.md  com.connectivity.checker.system.plist  com.zhengziying.xfinity-outage.checker.system.plist  connectivity_checker.newsyslog.conf  zhengziying.xfinity-outage.checker.newsyslog.conf
src/: git.py  logging.py  plot_outage_graph.py  site_checker.py  timestamp.py  wifi.py  xfinity_outage_checker.py
src/libs/checker/: git.py  timestamp.py  wifi.py
src/libs/plotter/: arg_parser.py  chart_generator.py  data_aggregator.py  dependencies.py  file_utils.py  log_parser.py  path_utils.py  system_utils.py
tests/: test_git.py  test_logging.py  test_site_checker.py  test_timestamp.py  test_wifi.py
tests/checker/: test_git.py  test_logging.py  test_site_checker.py  test_timestamp.py  test_wifi.py
tests/plotter/: test_arg_parser.py  test_chart_generator.py  test_data_aggregator.py  test_dependencies.py  test_file_utils.py  test_log_parser.py  test_path_utils.py  test_system_utils.py
